--- a/src/styles/EditUser.css
+++ b/src/styles/EditUser.css
@@ -1,8 +1,41 @@
+.editUser label{
+    position: absolute;
+    left :-9999px;
+}
 .editUser{
-    /* position:fixed; */
-    /* z-index: 1;; */
-    width: 100px;
-    height:100 px;
-    background-color: black;
+    display:inline-block;
+    display: flex;
+    flex-direction: row;   
+}
+
+.editUser input{
+    margin-top:2px;
+    padding: 5px;
+    font-size: 16px;
     border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.editUser input:focus {
+    outline: none; /* Remove the default focus outline */
+}
+.editUser select{
+    margin-top:2px;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 200px;
+}
+.editUser select:focus {
+    outline: none; /* Remove the default focus outline */
+}
+.editUser button{
+    margin-top:2px;
+    margin-left:1%;
+    margin-right:1%;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 100px;
 }
