--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,28 +1,29 @@
-.app-header {
+/* Header.css */
+
+body.light {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  
+  body.dark {
+    background-color: #000000;
+    color: #ffffff;
+  }
+  
+  .app-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #3f51b5;
-    padding: 10px 20px;
+    padding: 1rem;
+    background-color: rgb(13, 27, 154);
     color: white;
-}
-
-.app-title {
+  }
+  
+  .app-title {
     margin: 0;
-    font-size: 1.5rem;
-}
-
-.theme-toggle {
-    display: flex;
-    align-items: center;
-}
-
-.theme-toggle label {
-    margin-left: 10px;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-.theme-toggle input[type="radio"] {
-    margin-right: 5px;
-}
+  }
+  
+  .theme-toggle label {
+    margin-left: 1rem;
+  }
+  
