--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -1,41 +1,78 @@
+:root {
+    --background-color: white;
+    --text-color: black;
+    --border-color: #ddd;
+    --borderHead-color: #444;
+    --hover-border-color: #3f51b5;
+    --hover-background-color: whitesmoke;
+    --primary-color: #3f51b5;
+    --primarySave-color: #3f51b5;
+    --secondary-color: rgb(177, 29, 29);
+}
+
+[data-theme="dark"] {
+    --background-color: rgb(45, 41, 41);
+    --text-color: white;
+    --border-color: #444;
+    --borderHead-color: #b56e3f;
+    --hover-border-color: #b56e3f;
+    --hover-background-color: black;
+    --primarySave-color: rgb(52, 217, 52);
+    --secondary-color: red;
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+}
+
 .container {
     width: 100%;
 }
-  
+
 .container th {
     padding: 10px;
     text-align: center;
     border: 1.5px solid black;
+    border-color: var(--borderHead-color);
 }
 
 .container td {
     padding: 10px;
     text-align: center;
     align-items: center;
-    border: 1px solid #ddd;
+    border: 1px solid var(--border-color);
 }
-  
+
 .container svg {
     width: 30px;
     height: 30px;
-    color: #3f51b5;
+    color: var(--primary-color);
     cursor: pointer;
 }
 
+.body td:hover {
+    border: 1px solid var(--hover-border-color);
+}
+
+.body tr:hover {
+    background-color: var(--hover-background-color);
+}
+
 .save {
-    background-color: #3f51b5;
-    color: white;
+    background-color: var(--primarySave-color);
+    color: var(--text-color);
     border-radius: 5px;
-    border: 1px solid white;
+    border: 1px solid var(--background-color);
     height: 30px;
     margin: 2px;
     cursor: pointer;
 }
 
 .cancel {
-    background-color: rgb(177, 29, 29);
-    color: white;
-    border: 1px solid white;
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+    border: 1px solid var(--background-color);
     border-radius: 5px;
     height: 30px;
     margin: 2px;
@@ -44,12 +81,11 @@
 
 .input {
     padding: 10px; 
-    border: 2px solid black;
-    border-radius: 4px; /* Rounded corners */
+    border: 2px solid var(--text-color);
+    border-radius: 4px; 
     cursor: pointer; 
 }
 
-/* Optional: Hover and Focus styles */
 .input:hover,
 .input:focus {
     border-color: #007bff; 
