--- a/src/styles/TableColumnNames.css
+++ b/src/styles/TableColumnNames.css
@@ -1,9 +1,9 @@
 .table-head-row{
-    background-color: #5AB2FF;
+   
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    color: #1b3642;
+   
     font-weight: bold;
     font-size: 1.1em;
     text-align: left;
@@ -25,4 +25,12 @@
 }
 .six{
     width: 10%;
+}
+.lighth{
+    background-color: #5AB2FF;
+    color: #1b3642;
+}
+.darkh{
+    background-color: #000000;
+    color: #71d4ff;
 }
