--- a/src/styles/TableComponent.css
+++ b/src/styles/TableComponent.css
@@ -1,21 +1,37 @@
 .table-container{
     text-align: left;
     overflow: hidden;
-    width: 96%;
+    width: 100%;
     margin: 0 auto;
     display: table;
-    padding: 10px 10px 8em 10px;
+    padding-bottom: 50px;
+    /* padding: 10px 10px 8em 10px; */
 }
 .container{
     display: flex;
     flex-direction: column;
 }
-.data-rows-container .xyz-with-edit:nth-child(even) {
+.lightt{
+    color: #000;
+}
+.lightt .xyz-with-edit:nth-child(even) {
     background-color: #FFF9EF;
 }
-.data-rows-container .xyz-with-edit:nth-child(odd) {
+.lightt .xyz-with-edit:nth-child(odd) {
     background-color: #FFF9D0;
 }
+
+
+.darkt{
+    color: #fff
+}
+.darkt .xyz-with-edit:nth-child(even) {
+    background-color: #818181;
+}
+.darkt .xyz-with-edit:nth-child(odd) {
+    background-color: #5b5b5b;
+}
+
 
 
   
