--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,9 +2,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #3f51b5;
     padding: 10px 20px;
     color: white;
+}
+
+.header-light {
+    background-color: #3f51b5;
+}
+
+.header-dark {
+    background-color: rgb(39, 38, 38);
 }
 
 .app-title {
